@@ -182,6 +182,7 @@ export(aes_all)
 export(aes_auto)
 export(aes_q)
 export(aes_string)
+export(alpha)
 export(annotate)
 export(annotation_custom)
 export(annotation_logticks)
