@@ -1,3 +1,14 @@
+#' Create a transparent colour.
+#'
+#' @name alpha
+#' @export
+#' @examples
+#' ggplot(mpg, aes(displ, hwy)) +
+#'   geom_point(alpha = 0.5, colour = "blue")
+#'
+#' ggplot(mpg, aes(displ, hwy)) +
+#'   geom_point(colour = alpha("blue", 0.5))
+NULL
 
 # Null default
 # Analog of || from ruby
