@@ -1,0 +1,16 @@
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/utilities.r
+\name{alpha}
+\alias{alpha}
+\title{Create a transparent colour.}
+\description{
+Create a transparent colour.
+}
+\examples{
+ggplot(mpg, aes(displ, hwy)) +
+  geom_point(alpha = 0.5, colour = "blue")
+
+ggplot(mpg, aes(displ, hwy)) +
+  geom_point(colour = alpha("blue", 0.5))
+}
+
